src/test/ui/privacy/private-variant-reexport.stderr
error: variant `V` is private and cannot be re-exported
  --> $DIR/private-variant-reexport.rs:2:13
   |
LL |     pub use ::E::V;
   |             ^^^^^^
...
LL | enum E { V }
   | ------ help: consider making the enum public: `pub enum E`

error: variant `V` is private and cannot be re-exported
  --> $DIR/private-variant-reexport.rs:6:19
   |
LL |     pub use ::E::{V};
   |                   ^

error: variant `V` is private and cannot be re-exported
  --> $DIR/private-variant-reexport.rs:10:22
   |
LL |     pub use ::E::V::{self};
   |                      ^^^^

error: enum is private and its variants cannot be re-exported
  --> $DIR/private-variant-reexport.rs:14:13
   |
LL |     pub use ::E::*;
   |             ^^^^^^

error: aborting due to 4 previous errors

